--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-black-1">
+<nav class="navbar navbar-expand-md navbar-dark bg-black-1 fixed-top">
     <div class="container d-flex pt-3 pb-4">
         <a class="navbar-brand" routerLink="/">ISDb</a>
         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -25,7 +25,8 @@
             </div>
             <div class="form-inline nav-item ms-md-3 d-flex" *ngIf="currentUser">
                 <button type="button" class="btn btn-warning btn-theme ripple me-3" routerLink="/management" *ngIf="isAdmin"> Management </button>
-                <button type="button" class="btn btn-warning btn-theme ripple" (click)="logout()"> Logout </button>
+                <button type="button" class="btn btn-warning btn-theme ripple" (click)="logout()" *ngIf="isInfo"> Logout </button>
+                <button type="button" class="btn btn-warning btn-theme ripple" routerLink="/myinfo" *ngIf="!isInfo"> MyInfo </button>
             </div>
         </div>
     </div>
